fix spacing above accountabuddies requests on users#show

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -181,6 +181,10 @@ img.bg {
 
 }
 
+#user-show-accountabuddies ul h6{
+  margin-top: 100px;
+}
+
 .pending-sent {
   margin-top: 20px;
   float: left;
